# transcriber

./: build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/java/: MainActivity.kt  NativeWhisper.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ggml.c  native_whisper.cpp  native_whisper.h  native_whisper_chunk.cpp  whisper.cpp  whisper.h  whisper_native.cpp
app/src/main/cpp/ggml/: desktop.ini  ggml-backend-reg.cpp  ggml-backend.h  ggml-cpu-stubs.cpp  ggml-cpu.cpp  ggml-quants.c  ggml.c  ggml.h
app/src/main/java/: NativeWhisper.kt
app/src/main/java/com/axo/transcribidor/: MainActivity.kt  TranscriberUI.kt  WhisperBridge.kt
app/src/main/res/values/: color.xml  strings.xml  themes.xml
